* ??? ??? 15 ????  Ted Felix <ted@tedfelix.com>
  - 2.0.26 release
    (configure.ac)  (Ted Felix)
  - Fix build warning with new kernel headers.  Debian #808015.
    (libnetlink.c kacpimon/libnetlink.c)  (Ted Felix)

* Sun Aug 16 2015  Ted Felix <ted@tedfelix.com>
  - 2.0.25 release
    (configure.ac)  (Ted Felix)
  - Remove release process from README.
    (README)  (Ted Felix)
  - Fix missing libc_compat.h in release tarball.
    (Makefile.am kacpimon/Makefile.am kacpimon/libc_compat.h)
    (Ted Felix)

* Sat Aug 15 2015  Ted Felix <ted@tedfelix.com>
  - 2.0.24 release
    (configure.ac)  (Ted Felix)
  - Avoid using SW_VIDEOOUT_INSERT if it isn't available.  (input_layer.c)
    (Bostjan Skufca <bostjan@a2o.si>)
  - Add support for Copy and Restart keys.  (input_layer.c)
    (Andrey Kuznetsov)
  - Add support for non-glibc libc's.  (acpi_listen.c acpid.c event.c
    input_layer.c kacpimon/libnetlink.h libc_compat.h libnetlink.c netlink.c
    proc.c ud_socket.c) (Brendan Heading <brendanheading@gmail.com>)
  - Fix compiler warnings.  (acpi_listen.c event.c sock.c)
    (Brendan Heading <brendanheading@gmail.com>)
  - Add systemd info to documentation.  (README TESTPLAN)
    (Ted Felix)

* Sat Aug 23 2014  Ted Felix <ted@tedfelix.com>
  - 2.0.23 release
    (configure.ac)  (Ted Felix)
  - Avoid using KEY_MICMUTE if it doesn't exist.
    (input_layer.c)  (Lonnie Abelbeck)
  - Add troubleshooting section to man page.
    (acpid.8)  (Ted Felix)

* Sat March 15 2014  Ted Felix <ted@tedfelix.com>
  - 2.0.22 release
    (configure.ac)  (Ted Felix)
  - Add support for F20.  Debian Bug #738611.
    (input_layer.c)  (Ted Felix)
  - Fix for repeated mute keys on some ThinkPad models.
    (acpid.c acpid.h input_layer.c)
    (Torsten Hilbrich <torsten.hilbrich@secunet.com>)
  - Add "-t" short option for "--tpmutefix".
    (acpid.c)  (Ted Felix)
  - Update man page for --tpmutefix.
    (acpid.8)  (Ted Felix)

* Wed Jan 15 2014  Ted Felix <ted@tedfelix.com>
  - 2.0.21 release