@@ -3,6 +3,9 @@
     (configure.ac)  (Ted Felix)
   - Fix build warning with new kernel headers.  Debian #808015.
     (libnetlink.c kacpimon/libnetlink.c)  (Ted Felix)
+  - Fix build with musl libc.
+    (configure.ac sock.c)
+    (Khem Raj)
 
 * Sun Aug 16 2015  Ted Felix <ted@tedfelix.com>
   - 2.0.25 release
